PetShop/force-app/main/default/objects/Adocao__c/Adocao__c.object-meta.xml
<CustomObject>
    <label>Adoção</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nome de Adoção</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoções</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>