PetShop/force-app/main/default/objects/Adocao__c/fields/AniversarioAdocao__c.field-meta.xml
<CustomField>
    <fullName>AniversarioAdocao__c</fullName>
    <formula>AND(
Data__c != TODAY(),
AniversarioAdocaoEsteDia__c,
AniversarioAdocaoEsteMes__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aniversário de adoção?</label>
    <type>Checkbox</type>
</CustomField>