PetShop/force-app/main/default/objects/Adocao__c/fields/AniversarioAdocaoEsteDia__c.field-meta.xml
<CustomField>
    <fullName>AniversarioAdocaoEsteDia__c</fullName>
    <formula>DAY(Data__c) == DAY(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aniversário de adoção este dia?</label>
    <type>Checkbox</type>
</CustomField>