PetShop/force-app/main/default/objects/Adocao__c/fields/AniversarioAdocaoEsteMes__c.field-meta.xml
<CustomField>
    <fullName>AniversarioAdocaoEsteMes__c</fullName>
    <formula>MONTH(Data__c) == MONTH(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aniversário de adoção este mês?</label>
    <type>Checkbox</type>
</CustomField>