PetShop/force-app/main/default/objects/Adocao__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Adoções</relationshipLabel>
    <relationshipName>Adocoes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>