PetShop/force-app/main/default/objects/Adocao__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
                <default>true</default>
                <label>Aberto</label>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
            <value>
                <fullName>Reprovada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>