PetShop/force-app/main/default/objects/Adocao__c/validationRules/IsDataAdocaoValid.validationRule-meta.xml
<ValidationRule>
    <fullName>IsDataAdocaoValid</fullName>
    <active>true</active>
    <errorConditionFormula>Data__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Data__c</errorDisplayField>
    <errorMessage>A data da adoção não pode ser menor do que a data de hoje.</errorMessage>
</ValidationRule>