PetShop/force-app/main/default/objects/Adocao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Data__c</columns>
    <columns>Contato__c</columns>
    <columns>Pet__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>